--- a/Prince2020/templates/home.html
+++ b/Prince2020/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
   <h1>Petit Prince</h1>
-  <a href="https://cdn.radiofrance.fr/s3/cruiser-production/2019/11/22a536e5-08c0-4a31-bf36-e897521ce010/838_petit_prince.jpg"></a>
+  <img src="https://cdn.radiofrance.fr/s3/cruiser-production/2019/11/22a536e5-08c0-4a31-bf36-e897521ce010/838_petit_prince.jpg" alt="petit_prince">
 {% endblock content%}
