--- a/Prince2020/templates/carte.html
+++ b/Prince2020/templates/carte.html
@@ -1,5 +1,10 @@
 {% extends "layout.html" %}
 {% block content %}
   <h1>Carte</h1>
-
+  <iframe title="Cartographie des langues" aria-label="World Symbol map" id="datawrapper-chart-g5IfZ" src="//datawrapper.dwcdn.net/g5IfZ/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
+</script>
+<iframe title="Cartographie des langues" aria-label="World Symbol map" id="datawrapper-chart-DKE36" src="//datawrapper.dwcdn.net/DKE36/1/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
+</script>
+<iframe title="Cartographie des langues" aria-label="World Symbol map" id="datawrapper-chart-DKE36" src="//datawrapper.dwcdn.net/DKE36/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
+</script>
 {% endblock content%}
