--- a/Prince2020/templates/carte.html
+++ b/Prince2020/templates/carte.html
@@ -8,3 +8,10 @@
 <iframe title="Cartographie des langues" aria-label="World Symbol map" id="datawrapper-chart-DKE36" src="//datawrapper.dwcdn.net/DKE36/2/" scrolling="no" frameborder="0" style="width: 0; min-width: 100% !important; border: none;" height="400"></iframe><script type="text/javascript">!function(){"use strict";window.addEventListener("message",function(a){if(void 0!==a.data["datawrapper-height"])for(var e in a.data["datawrapper-height"]){var t=document.getElementById("datawrapper-chart-"+e)||document.querySelector("iframe[src*='"+e+"']");t&&(t.style.height=a.data["datawrapper-height"][e]+"px")}})}();
 </script>
 {% endblock content%}
+<!--j'ai utilisé le site datawrapper pour faire des tests, faut juste faire une requête sql sur la table des langues
+genre SELECT 'varpron' , 'geolat', 'geolng' FROM `prince_language` WHERE 1. tu "copy to clipboard"
+ensuite tu fais importer sur le site de datawrapper, tu colles les colonnes en enlevant la requête sql en haut
+et après tu peux modifier plein de trucs pour la visualisation, je sais pas comment afficher des infos en cliquant dessus
+mais c'est peut etre avec "set symbol tooltip" dans la partie 3 visualize
+je vais encore regarder une autre jour quand j'ai le temps mais c'est marrant en tout cas
+j'ai essayé de regarder openstreetmap un peu aussi mais je comprenais pas trop...-->
