--- a/Prince2020/templates/carte.html
+++ b/Prince2020/templates/carte.html
@@ -13,5 +13,4 @@ genre SELECT 'varpron' , 'geolat', 'geolng' FROM `prince_language` WHERE 1. tu "
 ensuite tu fais importer sur le site de datawrapper, tu colles les colonnes en enlevant la requête sql en haut
 et après tu peux modifier plein de trucs pour la visualisation, je sais pas comment afficher des infos en cliquant dessus
 mais c'est peut etre avec "set symbol tooltip" dans la partie 3 visualize
-je vais encore regarder une autre jour quand j'ai le temps mais c'est marrant en tout cas
-j'ai essayé de regarder openstreetmap un peu aussi mais je comprenais pas trop...-->
+je vais encore regarder une autre jour quand j'ai le temps mais c'est marrant en tout cas...-->
