j'ai essayé d'ajouter un footer

--- a/Prince2020/templates/layout.html
+++ b/Prince2020/templates/layout.html
@@ -34,6 +34,66 @@
             {% block content %}{% endblock %}
           </div>
       </main>
+      <!-- Footer -->
+      <footer class="page-footer font-small dark bg-steel pt-4">
+
+        <!-- Footer Links -->
+        <div class="container-fluid text-center text-md-left">
+
+          <!-- Grid row -->
+          <div class="row">
+
+            <!-- Grid column -->
+            <div class="col-md-6 mt-md-0 mt-3">
+
+              <!-- Content -->
+              <h5 class="text-uppercase">Contact</h5>
+
+
+              <a href=mailto:jeanphilippegoldman@gmail.com>Envoyez-nous un enregistrement audio</a>
+              <br>
+              <!--record.php à ajouter!-->
+              <a href=record.php>(Visitez d'abord cette page qui offre quelques trucs pour bien enregistrer)</a><br>
+
+            </div>
+            <!-- Grid column -->
+            <br />
+
+      <hr class="clearfix w-100 d-md-none pb-3">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3">
+
+        <!-- Links -->
+        <h5 class="text-uppercase">Liens</h5>
+
+        <ul class="liens">
+          <li>
+            <a class="text-my-own-color" href="http://latlcui.unige.ch/phonetique">Phonétique@ UniGE</a>
+          </li>
+          <li>
+            <a class="text-my-own-color" href="http://www.unige.ch/lettres/linguistique">Dpt de Linguistique</a>
+          </li>
+          <li>
+            <a class="text-my-own-color" href="http://www.unige.ch/lettres">Faculté des Lettres</a>
+          </li>
+          <li>
+            <a class="text-my-own-color" href="http://www.unige.ch">Université de Genève</a>
+          </li>
+        </ul>
+
+
+            <hr class="clearfix w-100 d-md-none pb-3">
+          </div>
+        </div>
+        <!-- Footer Links -->
+
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+          <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+        </div>
+        <!-- Copyright -->
+      </footer>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
