--- a/Prince2020/static/main.css
+++ b/Prince2020/static/main.css
@@ -78,3 +78,7 @@ a.article-title:hover {
 .account-heading {
   font-size: 2.5rem;
 }
+/*liens*/
+.text-my-own-color {
+  color: midnightblue !important; // Define your own color in your CSS
+}
