--- a/Prince2020/templates/layout.html
+++ b/Prince2020/templates/layout.html
@@ -22,6 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
               <!-- Navbar Right Side -->
               <div class="nav navbar-nav ml-auto">
+                <a class="nav-item nav-link" href="/home">Accueil</a>
                 <a class="nav-item nav-link" href="/liste_langues">Liste des langues</a>
                 <a class="nav-item nav-link" href="/carte">Carte</a>
               </div>
