--- a/Prince2020/static/main.css
+++ b/Prince2020/static/main.css
@@ -7,6 +7,17 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
+.column {
+  float: left;
+  width: 33.33%;
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
 
 .bg-steel {
   background-color: #5f788a;
