--- a/Prince2020/templates/liste_langues.html
+++ b/Prince2020/templates/liste_langues.html
@@ -2,4 +2,16 @@
 {% block content %}
   <h1>Liste des langues</h1>
 
+  <div class="row">
+    <div class="column">
+      <p>hello</p>
+      <p>hello</p>
+    </div>
+    <div class="column">
+      <p>hello</p>
+    </div>
+    <div class="column">
+      <p>hello</p>
+    </div>
+  </div>
 {% endblock content%}
