--- a/Prince2020/templates/home.html
+++ b/Prince2020/templates/home.html
@@ -1,5 +1,16 @@
 {% extends "layout.html" %}
 {% block content %}
   <h1>Petit Prince</h1>
-  <img src="https://cdn.radiofrance.fr/s3/cruiser-production/2019/11/22a536e5-08c0-4a31-bf36-e897521ce010/838_petit_prince.jpg" alt="petit_prince">
+  <img id= "prince" src="https://cdn.radiofrance.fr/s3/cruiser-production/2019/11/22a536e5-08c0-4a31-bf36-e897521ce010/838_petit_prince.jpg" alt="petit_prince">
+  <div>“On ne voit bien qu'avec le cœur”<br>
+
+Antoine de Saint-Exupéry <br>
+
+HOMMAGE MULTILINGUE
+AU PETIT PRINCE<br>
+
+149 langues
+157 extraits sonores
+...and counting...
+</div>
 {% endblock content%}
