--- a/Prince2020/static/stylesheets/main.css
+++ b/Prince2020/static/stylesheets/main.css
@@ -7,9 +7,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
-#prince {
-  width: 50%;
-}
+
 .column {
   float: left;
   width: 33.33%;
@@ -50,5 +48,5 @@ h1, h2, h3, h4, h5, h6 {
 
 /*liens*/
 .text-my-own-color {
-  color: midnightblue !important; // Define your own color in your CSS
+  color: red !important; // Define your own color in your CSS
 }
