--- a/Prince2020/templates/home.html
+++ b/Prince2020/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
   <h1>Petit Prince</h1>
-  <img id= "prince" src="https://cdn.radiofrance.fr/s3/cruiser-production/2019/11/22a536e5-08c0-4a31-bf36-e897521ce010/838_petit_prince.jpg" alt="petit_prince">
+  <img id= "prince" style="width:80%; height:auto" src="https://cdn.radiofrance.fr/s3/cruiser-production/2019/11/22a536e5-08c0-4a31-bf36-e897521ce010/838_petit_prince.jpg" alt="petit_prince">
   <div>“On ne voit bien qu'avec le cœur”<br>
 
 Antoine de Saint-Exupéry <br>
