--- a/Prince2020/static/stylesheets/main.css
+++ b/Prince2020/static/stylesheets/main.css
@@ -48,5 +48,5 @@ h1, h2, h3, h4, h5, h6 {
 
 /*liens*/
 .text-my-own-color {
-  color: red !important; // Define your own color in your CSS
+  color: black !important; // Define your own color in your CSS
 }
