--- a/Prince2020/templates/liste_langues.html
+++ b/Prince2020/templates/liste_langues.html
@@ -2,16 +2,20 @@
 {% block content %}
   <h1>Liste des langues</h1>
 
+  <div class="container-fluid">
   <div class="row">
-    <div class="column">
-      <p>hello</p>
-      <p>hello</p>
+    <div class="col-3">
+      Français
     </div>
-    <div class="column">
-      <p>hello</p>
+    <div class="col-3">
+      Espagnol
     </div>
-    <div class="column">
-      <p>hello</p>
+    <div class="col-3">
+      Allemand
+    </div>
+    <div class="col-3">
+      Anglais
     </div>
   </div>
+</div>
 {% endblock content%}
