--- a/Prince2020/static/stylesheets/main.css
+++ b/Prince2020/static/stylesheets/main.css
@@ -8,11 +8,8 @@ h1, h2, h3, h4, h5, h6 {
   color: #444444;
 }
 
-.column {
-  float: left;
-  width: 33.33%;
-  padding: 20px;
-  margin: 20px;
+.row{
+  margin:10px;
 }
 
 /* Clear floats after the columns */
