--- a/Prince2020/templates/home.html
+++ b/Prince2020/templates/home.html
@@ -1,16 +1,28 @@
 {% extends "layout.html" %}
 {% block content %}
   <h1>Petit Prince</h1>
-  <img id= "prince" style="width:80%; height:auto" src="https://cdn.radiofrance.fr/s3/cruiser-production/2019/11/22a536e5-08c0-4a31-bf36-e897521ce010/838_petit_prince.jpg" alt="petit_prince">
-  <div>“On ne voit bien qu'avec le cœur”<br>
+  <div class="row_home align-items-center">
+    <div class="column_home">
+      <img id= "prince" src="https://cdn.radiofrance.fr/s3/cruiser-production/2019/11/22a536e5-08c0-4a31-bf36-e897521ce010/838_petit_prince.jpg" alt="petit_prince">
+    </div>
+    <div class="column_home">
+      <div class="about">
+        <p><strong>“On ne voit bien qu'avec le cœur”</strong><br>
 
-Antoine de Saint-Exupéry <br>
+          Antoine de Saint-Exupéry <br>
 
-HOMMAGE MULTILINGUE
-AU PETIT PRINCE<br>
+          HOMMAGE MULTILINGUE
+          AU PETIT PRINCE<br>
 
-149 langues
-157 extraits sonores
-...and counting...
-</div>
+          149 langues
+          157 extraits sonores
+          ...and counting...
+        </p>
+      </div>
+    </div>
+  </div>
+
+
+
+  </div>
 {% endblock content%}
