--- a/Prince2020/templates/home.html
+++ b/Prince2020/templates/home.html
@@ -21,8 +21,10 @@
       </div>
     </div>
   </div>
-
-
+  <div class="buttons">
+    <button type="button" class="btn btn-dark bg-steel">Afficher la liste des langues</button>
+    <button type="button" class="btn btn-dark bg-steel">Afficher la carte du monde</button>
+    <button type="button" class="btn btn-dark bg-steel">Afficher l'arbre hiérarchique des groupes de langues</button>
 
   </div>
 {% endblock content%}
