--- a/Prince2020/templates/layout.html
+++ b/Prince2020/templates/layout.html
@@ -49,10 +49,10 @@
               <h5 class="text-uppercase">Contact</h5>
 
 
-              <a href=mailto:jeanphilippegoldman@gmail.com>Envoyez-nous un enregistrement audio</a>
+              <a class="text-my-own-color" href=mailto:jeanphilippegoldman@gmail.com>Envoyez-nous un enregistrement audio</a>
               <br>
               <!--record.php à ajouter!-->
-              <a href=record.php>(Visitez d'abord cette page qui offre quelques trucs pour bien enregistrer)</a><br>
+              <a class="text-my-own-color" href=record.php>(Visitez d'abord cette page qui offre quelques trucs pour bien enregistrer)</a><br>
 
             </div>
             <!-- Grid column -->
