--- a/Prince2020/templates/home.html
+++ b/Prince2020/templates/home.html
@@ -22,9 +22,9 @@
     </div>
   </div>
   <div class="buttons">
-    <button type="button" class="btn btn-dark bg-steel">Afficher la liste des langues</button>
-    <button type="button" class="btn btn-dark bg-steel">Afficher la carte du monde</button>
-    <button type="button" class="btn btn-dark bg-steel">Afficher l'arbre hiérarchique des groupes de langues</button>
+    <a class="btn btn-dark bg-steel" href="/liste_langues">Afficher la liste des langues</a>
+    <a class="btn btn-dark bg-steel" href="/carte">Afficher la carte du monde</a>
+    <a class="btn btn-dark bg-steel">Afficher l'arbre hiérarchique des groupes de langues</a>
 
   </div>
 {% endblock content%}
