pas fini, je galère avec la db ^^

--- a/Prince2020/templates/liste_langues.html
+++ b/Prince2020/templates/liste_langues.html
@@ -5,16 +5,16 @@
   <div class="container-fluid">
   <div class="row">
     <div class="col-3">
-      Français
+      <a href="/langue/français">Français</a>
     </div>
     <div class="col-3">
-      Espagnol
+      <a href="/langue/espagnol">Espagnol</a>
     </div>
     <div class="col-3">
-      Allemand
+      <a href="/langue/allemand">Allemand</a>
     </div>
     <div class="col-3">
-      Anglais
+      <a href="/langue/anglais">Anglais</a>
     </div>
   </div>
 </div>
