--- a/Prince2020/templates/langue.html
+++ b/Prince2020/templates/langue.html
@@ -2,4 +2,20 @@
 {% block content %}
   <h1>Langue : {{title}}</h1>
 
+  <p>Si image: afficher ici</p>
+
+  <p>[en français]<br>
+  [en anglais]<br>
+  [dans la propre langue]</p>
+
+  <p>Afficher le texte du Petit Prince</p>
+
+  <p>Afficher la liste des enregistrements</p>
+
+  <a class="btn btn-dark bg-steel" href="/liste_langues">Retour à la liste des langues</a>
+  <br>
+  <br>
+
+
+
 {% endblock content%}
